// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

(require('./b'): number);

=====================================output=====================================
// @flow

(require("./b"): number);

================================================================================
`;

exports[`b.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = "";

=====================================output=====================================
// @flow

module.exports = "";

================================================================================
`;

exports[`test.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

("": number);

=====================================output=====================================
// @flow

("": number);

================================================================================
`;
